tests/paczka1/small_fuzzy/45054337.err
Error in line 2: pUfhh A991 82,7
Error in line 6: Icsx S250 0,7
Error in line 7: pUfhh A1 261,3
